# themix-gui

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .hound.yml  .pylintrc  .scss-lint.yml  .travis.yml  .vimrc  CHANGES  CREDITS  Dockerfile  Dockerfile_35  Dockerfile_current  Dockerfile_python34_openmandriva  Dockerfile_python35_ubuntu_1604  Guardfile  Makefile  PKGBUILD  README  README.md  TODO  archdroid.sh  change_color.sh  current_colors.txt  darker.sh  git-status  gnome_colors.sh  gui.py  gui.sh  index.html  index.theme  multi_export_cli.sh  mypy.ini  oomoxify.sh  oomoxify_old.sh  po.mk  pyproject.toml  script.js  (+2 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/workflows/: ci.yml
AppImage/: Dockerfile  Recipe  Recipe.deps  build_AppImage.sh  functions.sh
archdroid-icon-theme/: README.md  index.theme
colors/: DarkOnesk11  DarkOnesk12  DarkOnesk3  DarkOnesk9  base16  dhl  gnome-noble.sh  gnome_noble  gnome_noble.sh  gnome_noble_dark.sh  lcars  lcars-light-beige.sh  lcars2.sh  lcars3.sh  lcars3_lightbg.sh  lcars_beige  lcars_beige.sh  lcars_bright.sh  lcars_dark.sh  lcars_light.sh  lcars_light_beige.sh  lcars_violet  le2.sh  monovedek  monovedek-gray  monovedek.sh  monovedek2.sh  monovedek3.sh  monovedek4.sh  monovedek_lcars  monovedek_new.sh  monovedek_old  new1.sh  new2.sh  new3.sh  new4.sh  noble-dark.sh  numix  pro-medium-light.sh  pro_medium_light  (+9 more)
colors/Base-16/: Apathy-Dark  Apathy-Light  Ashes-Dark  Ashes-Light  Atelier-cave-Dark  Atelier-cave-Light  Atelier-dune-Dark  Atelier-dune-Light  Atelier-estuary-Dark  Atelier-estuary-Light  Bespin-Dark  (+94 more)
dockerfiles/: Dockerfile_current_arch  Dockerfile_python310_ubuntu_2204  Dockerfile_python34_centos_7  Dockerfile_python34_openmandriva  Dockerfile_python34_venv_arch  Dockerfile_python35_ubuntu_1604  Dockerfile_python36_ubuntu_1804  Dockerfile_python38_ubuntu_2004
docs_markdown/: CLI.md  CSS_Hacks.md  Manual_Installation.md  Ubuntu_Old.md
export_config_examples/: multi_export_oodwaita.json  multi_export_oomox_classic.json
gnome-colors/: AUTHORS  ChangeLog  Makefile  README  links
gtk-2.0/: gtkrc  gtkrc.hidpi
gtk-3.0/: gtk-dark.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css  gtk.gresource.xml  settings.ini
gtk-3.0.bak/: gtk-main.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css  settings.ini  unity.css
gtk-3.20/: gtk-widgets-assets.css  gtk-widgets.css  gtk.gresource.xml
gui/: __main__.py  colors_list.py  dialogs.py  export.py  helpers.py  main.py  presets_list.py  preview.py  system-file-manager.svg.template  theme.css  theme20.css  theme_model.py  user-desktop.svg.template
maintenance_scripts/: changelog.sh  get_global_expressions.sh  get_non_final_expressions.sh  git-diff.sh  git-status.sh  gtk_init_for_pylint_sigh.py  lint.sh  makefile_shellcheck.py  release_archdroid_icons_plugin.sh  release_base16_plugin.sh  release_gnomecolors_icons_plugin.sh  release_materia_plugin.sh  release_numix_icons_plugin.sh  release_oomox_plugin.sh  release_papirus_icons_plugin.sh  release_plugin.sh  release_spotify_plugin.sh  release_suruplus_aspromauros_icons_plugin.sh  release_suruplus_icons_plugin.sh  run_ci.sh  run_test.sh  set_package_version.sh  shellcheck.sh  show_recent_history.sh  show_submodule_diff.sh  tag_release.sh  vulture_whitelist.py
metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
oomox_gui/: __init__.py  __main__.py  about.py  about.ui  color.py  colors_list.py  config.py  export.py  export_common.py  export_config.py  gtk_helpers.py  helpers.py  i18n.py  main.py  migrations.py  multi_export.py  multi_export_cli.py  palette_cache.py  plugin_api.py  plugin_loader.py  preset_list.py  presets_list.py  preview.py  preview_icons.py  preview_terminal.py  settings.py  shortcuts.py  shortcuts.ui  terminal.py  theme.css  theme20.css  theme_file.py  theme_file_load.py  theme_file_parse.py  theme_file_parser.py  theme_flatplat.css  theme_model.py  xrdb.py
openbox-3/: bullet.xbm  close.xbm  desk.xbm  iconify.xbm  max.xbm  max_toggled.xbm  shade.xbm  shade_toggled.xbm  themerc
packaging/: com.github.actionless.oomox.desktop  com.github.themix-project.oomox.appdata.xml  com.github.themix-project.oomox.desktop  com.github.themix_project.Oomox.appdata.xml  com.github.themix_project.Oomox.desktop  install.sh  oomox.desktop  render-icon.sh
po/: es.po  es_BACKUP_14798.po  es_BASE_14798.po  es_REMOTE_14798.po  fr.po  fr.po.orig  it.po  it.po.orig  nl_NL.po  pt_BR.po  pt_BR.po.orig  pt_PT.po  pt_PT.po.orig
scripted_colors/: random
scripts/: darker.sh  hex_to_rgba.sh  is_dark.sh  mix.sh  render-assets.sh  shade.sh  utils.sh
src/: index.theme  qt5ct_palette.conf
svg-sources/: export-png
terminal_templates/: basic  basic_alt  basic_swapped  basquiat  chestnut  jwr-dark  kazu  lolitastic  monokai  monovedek  monovedek_pale  monovedek_pale_gray  s3r0_modified  spacemacs-dark  tempus_autumn  tempus_classic  tempus_dawn  tempus_day  tempus_dusk  tempus_fugit  tempus_future  tempus_night  tempus_past  tempus_rift  tempus_spring  tempus_summer  tempus_tempest  tempus_totus  tempus_warp  tempus_winter  waltz  waltz2
xfce-notify-4.0/: gtk.css  gtkrc
xfwm4/: Makefile  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-prelight.xpm  shade-toggled-pressed.xpm  stick-active.xpm  (+22 more)
(+789 files in other folders)
