[project]
requires-python = ">=3.10"

[tool.autopep8]
max_line_length = 120
ignore = ""
aggressive = 1

[tool.ruff]
preview = true
line-length = 120
select = [
    "F",
    "E", "W",
    "C90",
    "I",
    "D",
    "UP",
    "N",
    "YTT",
    "ANN",
    "S",
    "BLE",
    #"FBT", # @TODO: Boolean positional arg/value in call
    "B",
    "A",
    "C4",
    "T10",
    "EM",
    "ISC",
    "ICN",
    #"T20", # @TODO: refactor print() to logging
#    #"PT",  # pytest
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "DTZ",
    "ERA",
#    #"PD",  # pandas
    "PGH",
    "PL",
    "PIE",
    "COM",
    "INP",
    "EXE",
    "TCH",
    "TRY",
	#"PTH", # @TODO: refactor os.path to pathlib.Path
    "RUF",
]
ignore = [
	# enable back later:
	"C901",  # "too complex"
	"ERA001", # commented out code
	# already managed by pylint, mb replace completely to ruff later:
	"PLR0912",  # too many branches
	"PLR0913",  # too many arguments
	"PLR0915",  # too many statements

	"ANN101",  # annotate self
	"ANN102",  # annotate cls
	"ANN401",  # disable Any

	"BLE001",  # disallow catching Exception

	# docstrings
	"D100",
	"D101",
	"D102",
	"D103",
	#
	"D105",
    "D106",
	"D107",
	"D203", # conflicts with D211
	"D205",
	"D212", # conflicts with D213
	"D400",
	"D401", # idk, it seems broken? pydocstyle.org is down so i can't check how it's supposed to work
	"D415",

	#"Q000",  # force double-quotes
]

[tool.ruff.per-file-ignores]
"oomog_gui/main.py" = [
    "E402",
]
"plugins/*/oomox_plugin.py" = [
	"INP001",
    "RUF012",
    "PLR6301",
]
"maintenance_scripts/*.py" = [
	"INP001",
	"T201",
]
"maintenance_scripts/pikaman.py" = [
	"ARG002",
]
"maintenance_scripts/vulture_whitelist.py" = [
	"B018",
]
