[project]
name = "oomox_gui"
version = "1.15.1"
requires-python = ">=3.10"

[tool.autopep8]
max_line_length = 120
ignore = ""
aggressive = 1

[tool.ruff]
line-length = 120
unsafe-fixes = true

[tool.ruff.lint.mccabe]
max-complexity = 19

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = [
    "F",
    "E", "W",
    "C90",
    "I",
    "D",
    "UP",
    "N",
    "YTT",
    "ANN",
    "S",
    "BLE",
    #"FBT", # @TODO: Boolean positional arg/value in call
    "B",
    "A",
    "C4",
    "T10",
    "EM",
    "ISC",
    "ICN",
    #"T20", # @TODO: refactor print() to logging
#    #"PT",  # pytest
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "DTZ",
    "ERA",
#    #"PD",  # pandas
    "PGH",
    "PL",
    "PIE",
    "COM",
    "INP",
    "EXE",
    "TCH",
    "TRY",
    #"PTH", # @TODO: refactor os.path to pathlib.Path
    "RUF",
    "AIR",
    "ASYNC",
    #"CPY",  # @TODO: add copyrights
    #"DJ",  # django
    "FA",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "INT",
    "LOG",
    #"NPY",  # numpy
    "PERF",
    "PYI",
    "RSE",
    "SLF",
    "SLOT",
    "TD",
    "TRIO",
]
ignore = [
    # enable back later:
    "C901",  # "too complex"
    "ERA001", # commented out code
    # already managed by pylint, mb replace completely to ruff later:
    "PLC0415",  # `import` should be at the top-level of a file
    "PLR0904",  # Too many public methods
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too many statements
    "PLR0917",  # Too many positional arguments
    "PLR1702",  # Too many nested blocks
    # bandit stuff:
    "S404",

    "ANN101",  # annotate self
    "ANN102",  # annotate cls
    "ANN401",  # disable Any

    "BLE001",  # disallow catching Exception

    # docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    #
    "D105",
    "D106",
    "D107",
    "D203", # conflicts with D211
    "D205",
    "D212", # conflicts with D213
    "D400",
    "D401", # idk, it seems broken? pydocstyle.org is down so i can't check how it's supposed to work
    "D415",
    "PLR2044"  # line with empty comment

    #"Q000",  # force double-quotes
]

[tool.ruff.lint.per-file-ignores]
"oomog_gui/main.py" = [
    "E402",
]
"plugins/*/oomox_plugin.py" = [
    "INP001",
    "RUF012",
    "PLR6301",
]
"maintenance_scripts/*.py" = [
    "INP001",
    "T201",
]
"maintenance_scripts/pikaman.py" = [
    "ARG002",
]
"maintenance_scripts/vulture_whitelist.py" = [
    "B018",
]
